@@ -1,5 +1,13 @@
 package com.minimajack.v8.transformers.impl;
 
+import com.minimajack.v8.annotation.*;
+import com.minimajack.v8.transformers.AbstractClassTransformer;
+import com.minimajack.v8.transformers.impl.field.FieldInfo;
+import com.minimajack.v8.utility.SerializedOutputStream;
+import com.minimajack.v8.utility.V8Reader;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -10,53 +18,115 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import com.minimajack.v8.annotation.Required;
-import com.minimajack.v8.annotation.V8Class;
-import com.minimajack.v8.annotation.V8Since;
-import com.minimajack.v8.annotation.V8Transient;
-import com.minimajack.v8.annotation.V8Version;
-import com.minimajack.v8.transformers.AbstractClassTransformer;
-import com.minimajack.v8.transformers.impl.field.FieldInfo;
-import com.minimajack.v8.utility.V8Reader;
-
-public class ClassTransformer
+public class ObjectTransformer
     extends AbstractClassTransformer<Object>
 {
-    final Logger logger = LoggerFactory.getLogger( ClassTransformer.class );
+    final Logger logger = LoggerFactory.getLogger( ObjectTransformer.class );
 
-    private static final Map<Class<?>, List<FieldInfo>> cacheFields = new HashMap<Class<?>, List<FieldInfo>>();
+    private static final Map<Class<?>, List<FieldInfo>> cacheFields = new HashMap<>();
 
-    private static final Map<Class<?>, Method> afterUnmarshalMethods = new HashMap<Class<?>, Method>();
+    private static final Map<Class<?>, Method> afterUnmarshalMethods = new HashMap<>();
 
-    private static final List<Class<?>> versionalClasses = new ArrayList<Class<?>>();
+    private static final List<Class<?>> versionalClasses = new ArrayList<>();
 
     @Override
     public Object read( Class<?> clazz, ByteBuffer buffer )
     {
         boolean isV8Class = clazz.getAnnotation( V8Class.class ) != null;
-        boolean isHasVersion = clazz.getAnnotation( V8Version.class ) != null;
         Object object;
         if ( isV8Class )
         {
-            return readV8Class( clazz, buffer, isHasVersion );
+            return readV8Class( clazz, buffer);
         }
         else
         {
-            object = readClass( clazz, buffer, isHasVersion );
+            object = readClass( clazz, buffer);
         }
 
         return object;
     }
 
-    public Object readV8Class( Class<?> clazz, ByteBuffer buffer )
-    {
-        return readV8Class( clazz, buffer, false );
+    @Override
+    public void write(Object object, SerializedOutputStream buffer) {
+        Class clazz = object.getClass();
+        boolean isV8Class = clazz.getAnnotation( V8Class.class ) != null;
+        if ( isV8Class )
+        {
+            writeV8Class( object, clazz, buffer );
+        }
+        else
+        {
+            writeClass( object, clazz, buffer);
+        }
     }
 
-    public Object readV8Class( Class<?> clazz, ByteBuffer buffer, boolean versional )
+    private void writeClass(Object object, Class clazz, SerializedOutputStream buffer) {
+        {
+            List<FieldInfo> fields = cacheFields.get( clazz );
+            if ( fields == null )
+            {
+                fields = processClass( clazz );
+            }
+            boolean first = true;
+            boolean hasVersion = versionalClasses.contains( clazz );
+            Integer version = 0;
+            try
+            {
+                for ( FieldInfo field : fields )
+                {
+                    if ( hasVersion )
+                    {
+                        V8Since since = field.since;
+                        if ( since != null )
+                        {
+                            if ( version < since.version() || version >= since.removed() )
+                            {
+                                continue;
+                            }
+                        }
+                    }
+                    if ( !field.required  )
+                    {
+                        if(field.field.get(object) == null)
+                        break;
+                    }
+                    if ( !first )
+                    {
+                        buffer.putComa();
+                    }
+                    Class<?> fieldType = field.fieldType;
+                    logger.debug( "Write field {} {}", field.name, fieldType );
+                    Type paramType = field.paramType;
+                    V8Reader.write( field.field.get(object), paramType, buffer );
+                    if ( field.isVersion )
+                    {
+                        hasVersion = true;
+                        version = (Integer) field.field.get(object);
+                    }
+
+                    first = false;
+
+                }
+            }
+            catch ( IllegalArgumentException | IllegalAccessException e )
+            {
+                throw new RuntimeException( e );
+            }
+
+        }
+    }
+
+    public void writeV8Class( Object object, Class<?> clazz, SerializedOutputStream buffer)
+    {
+        buffer.putOpenBracket();
+
+        writeClass( object, clazz, buffer );
+
+        buffer.putCloseBracket();
+
+    }
+
+    public Object readV8Class( Class<?> clazz, ByteBuffer buffer)
     {
         readBracket( buffer );
 
@@ -67,11 +137,6 @@ public class ClassTransformer
         runAfterUnmarshal( clazz, object );
 
         return object;
-    }
-
-    public Object readClass( Class<?> clazz, ByteBuffer buffer )
-    {
-        return readClass( clazz, buffer, false );
     }
 
     public List<FieldInfo> processClass( Class<?> clazz )
@@ -86,7 +151,7 @@ public class ClassTransformer
                 throw new RuntimeException( "bad version: " + clazz.getName() );
             }
         }
-        List<FieldInfo> lfi = new ArrayList<FieldInfo>();
+        List<FieldInfo> lfi = new ArrayList<>();
         for ( Field field : fields )
         {
             if ( field.getAnnotation( V8Transient.class ) != null )
@@ -125,14 +190,14 @@ public class ClassTransformer
         return lfi;
     }
 
-    public Object readClass( Class<?> clazz, ByteBuffer buffer, boolean versional )
+    public Object readClass( Class<?> clazz, ByteBuffer buffer )
     {
         Object object;
         try
         {
-            object = clazz.newInstance();
+            object = clazz.getConstructor().newInstance();
         }
-        catch ( InstantiationException | IllegalAccessException e )
+        catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e )
         {
             throw new RuntimeException( "Cant instantinate class" + clazz );
         }
@@ -160,8 +225,9 @@ public class ClassTransformer
                         }
                     }
                 }
-                if ( field.required || buffer.get( buffer.position() ) != 0x7D
-                    && buffer.get( buffer.position() ) != 0x0D )
+                byte nextSymbol = buffer.get(buffer.position());
+                if ( field.required || nextSymbol != 0x7D
+                    && nextSymbol != 0x0D )
                 {
                     if ( !first )
                     {
@@ -172,13 +238,12 @@ public class ClassTransformer
                 {
                     break;
                 }
-                logger.debug( "Read field {} ", field.name );
                 Class<?> fieldType = field.fieldType;
+                logger.debug( "Read field {} {}", field.name, fieldType );
                 Type paramType = field.paramType;
                 Object fieldValue = V8Reader.read( fieldType, paramType, buffer );
-                if ( field.isVersion )
+                if ( hasVersion && field.isVersion )
                 {
-                    hasVersion = true;
                     version = (Integer) fieldValue;
                 }
                 logger.debug( "VALUE: {} ", fieldValue );
